# gregg

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml
architecture/: README.md  error-conventions.md  macos-collector-notes.md  protocol.md  workspace.md
crates/gregg/: Cargo.toml  README.md  config.example.toml
crates/gregg-protocol/: Cargo.toml  README.md
crates/gregg-protocol/src/: health.rs  lib.rs  snapshot.rs  test_support.rs  validate.rs
crates/gregg-protocol/tests/: integration.rs
crates/gregg-protocol/tests/fixtures/: health-collector-failure-v1.json  health-ready-v1.json  health-warming-v1.json  linux-v1.json  macos-v1.json
crates/gregg/src/: action.rs  cli.rs  clock.rs  config.rs  endpoint.rs  event.rs  input.rs  main.rs  poller.rs  scheduler.rs  state.rs  terminal.rs
crates/gregg/src/ui/: bar.rs  diagnostics.rs  layout.rs  mod.rs  system_block.rs  text.rs
crates/greggd/: Cargo.toml  LICENSE  README.md
crates/greggd/src/: cli.rs  config.rs  lib.rs  main.rs  run.rs  sampler.rs
crates/greggd/src/collector/: error.rs  mod.rs
crates/greggd/src/collector/linux/: cpu.rs  fixtures.rs  identity.rs  memory.rs  mod.rs  source.rs  tests.rs
crates/greggd/src/collector/macos/: cpu.rs  ffi.rs  identity.rs  memory.rs  mod.rs  normalize.rs  swap.rs  tests.rs
crates/greggd/src/collector/test_fixtures/: arm64_os_release.txt  arm64_proc_loadavg.txt  arm64_proc_meminfo.txt  arm64_proc_stat_a.txt  arm64_proc_stat_b.txt  container_proc_loadavg.txt  container_proc_meminfo.txt  container_proc_stat_a.txt  container_proc_stat_b.txt  cpu_reset_proc_stat_a.txt  cpu_reset_proc_stat_b.txt  cpu_zero_delta_proc_stat_a.txt  cpu_zero_delta_proc_stat_b.txt  escaped_os_release.txt  high_memory_proc_loadavg.txt  high_memory_proc_meminfo.txt  high_memory_proc_stat_a.txt  high_memory_proc_stat_b.txt  hotplug_2core_proc_stat_a.txt  hotplug_4core_proc_stat_b.txt  malformed_proc_loadavg_negative.txt  malformed_proc_loadavg_non_numeric.txt  malformed_proc_loadavg_too_few_fields.txt  malformed_proc_meminfo_available_exceeds_total.txt  malformed_proc_meminfo_missing_total.txt  malformed_proc_stat_non_numeric.txt  malformed_proc_stat_too_few_fields.txt  minimal_os_release.txt  missing_mem_available_proc_meminfo.txt  missing_mem_available_proc_stat_a.txt  missing_mem_available_proc_stat_b.txt  suspend_resume_proc_stat_a.txt  suspend_resume_proc_stat_b.txt  swap_change_proc_meminfo_a.txt  swap_change_proc_meminfo_b.txt  ubuntu_x86_64_os_release.txt  ubuntu_x86_64_proc_loadavg.txt  ubuntu_x86_64_proc_meminfo.txt  ubuntu_x86_64_proc_stat_a.txt  ubuntu_x86_64_proc_stat_b.txt  (+6 more)
crates/greggd/src/server/: error.rs  mod.rs  tests.rs
crates/greggd/src/service/: launchd.rs  mod.rs  systemd.rs
crates/greggd/tests/: linux_collector.rs
packaging/: README.md  install-linux.sh  install-macos.sh
packaging/launchd/: com.eggstack.greggd.plist
packaging/systemd/: greggd.service
plans/: 000-roadmap-v1.md  001-foundation-workspace-protocol.md  002-linux-metrics-collector.md  003-macos-metrics-collector.md  004-daemon-sampler-http-api.md  005-daemon-config-service-packaging.md  006-client-config-cli.md  007-polling-state-engine.md  008-compact-ratatui-tui.md  009-testing-hardening-performance.md  010-cratesio-release-v1.md  011-v1.0.1-corrective-closure.md  README.md  release-candidate-evidence.md  tui-manual-tests.md
scripts/: measure-resources.sh  soak-test.sh
