[workspace]
resolver = "2"
members = [
    "crates/gregg-protocol",
    "crates/greggd",
    "crates/gregg",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["The Gregg Authors"]
repository = "https://github.com/eggstack/gregg"
homepage = "https://github.com/eggstack/gregg"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[workspace.metadata]
"docs.rs" = { all-features = true }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
