[package]
name = "gregg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Compact keyboard-first terminal monitor that polls greggd endpoints and renders each system in four rows."
keywords = ["tui", "monitoring", "metrics", "ratatui", "cli"]
categories = ["command-line-utilities", "visualization"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "gregg"
path = "src/main.rs"

[dependencies]
gregg-protocol = { version = "0.1.0", path = "../gregg-protocol" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
thiserror = { version = "1.0", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[lints]
workspace = true
