[package]
name = "greggd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Lightweight Linux and macOS metrics daemon that exposes a read-only JSON API for the gregg client."
keywords = ["metrics", "daemon", "system", "monitoring"]
categories = ["api-bindings", "system-utilities"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[[bin]]
name = "greggd"
path = "src/main.rs"

[lib]
name = "greggd"
path = "src/lib.rs"

[dependencies]
gregg-protocol = { version = "0.1.0", path = "../gregg-protocol" }
thiserror = { version = "1.0", default-features = false }

[lints]
workspace = true
