[package]
name = "greggd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Lightweight Linux and macOS metrics daemon that exposes a read-only JSON API for the gregg client."
keywords = ["metrics", "daemon", "system", "monitoring"]
categories = ["api-bindings", "system-utilities"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE", "../../packaging/**/*"]

[[bin]]
name = "greggd"
path = "src/main.rs"

[lib]
name = "greggd"
path = "src/lib.rs"

[dependencies]
gregg-protocol = { version = "0.1.0", path = "../gregg-protocol" }
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "1", features = ["rt", "net", "macros", "sync", "time", "signal", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { version = "1.0", default-features = false }
clap = { version = "4", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "io-util"] }
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["client"] }
gregg-protocol = { version = "0.1.0", path = "../gregg-protocol", features = ["test_support"] }
http-body-util = "0.1"

[lints]
workspace = true
